css/style.css
:root {
  --main-color: #ffd76d;
  --bg-footer: #3f3f3f;
  --bg-base: #202020;
  --off-white: #c2c0c0;
  --transition-text: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
  --transition-hover: 
  --transition-hover: all 450ms ease-in-out;
  --font-body-sm: 16px;
  --font-body-md: 20px;
  --font-body-lg: 30px;
  --font-family: "Raleway", sans-serif;
}

.parallax {
  height: 500px; /* fallback for older browsers */
  height: 100vh;
  overflow-x: hidden;
  overflow-y: auto;
  -webkit-perspective: 300px;
  perspective: 300px;
}

.parallax__group {
  position: relative;
  height: 500px; /* fallback for older browsers */
  height: 100vh;
  -webkit-transform-style: preserve-3d;
  transform-style: preserve-3d;
}

.parallax__layer {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.parallax__layer--fore {
  -webkit-transform: translateZ(90px) scale(0.7);
  transform: translateZ(90px) scale(0.7);
  z-index: 1;
}

.parallax__layer--base {
  -webkit-transform: translateZ(0);
  transform: translateZ(0);
  z-index: 4;
}

.parallax__layer--back {
  -webkit-transform: translateZ(-300px) scale(2);
  transform: translateZ(-300px) scale(2);
  z-index: 3;
}

.parallax__layer--deep {
  -webkit-transform: translateZ(-600px) scale(3);
  transform: translateZ(-600px) scale(3);
  z-index: 2;
}

.title {
  color: #fff;
}

/****************************************************************************************
                                    Debugger Effect Styling
 ****************************************************************************************/

.debug {
  position: fixed;
  top: 0;
  left: 0.5em;
  z-index: 999;
  background: rgba(0, 0, 0, 0.85);
  color: #fff;
  padding: 0.5em;
  border-radius: 0 0 5px 5px;
}
.debug-on .parallax__group {
  -webkit-transform: translate3d(800px, 0, -800px) rotateY(30deg);
  transform: translate3d(700px, 0, -800px) rotateY(30deg);
}
.debug-on .parallax__layer {
  box-shadow: 0 0 0 2px #000;
  opacity: 0.9;
}
.parallax__group {
  -webkit-transition: -webkit-transform 0.5s;
  transition: transform 0.5s;
}

/****************************************************************************************
                                    General Styling
 ****************************************************************************************/

body,
html {
  overflow: hidden;
}

body {
  font: 100% / 1.5 Arial;
  color: #ffffff;
  font-family: var(--font-family);
  line-height: 1.3;
}

* {
  margin: 0;
  padding: 0;
}

p > a {
  display: inline-block;
  text-decoration: none;
  text-decoration-skip-ink: auto;
  position: relative;
  transition: var(--transition-text);
  cursor: pointer;
  color: var(--main-color);
}

p > a::after {
  content: "";
  display: block;
  width: 0px;
  height: 1px;
  position: relative;
  background-color: var(--main-color);
  transition: var(--transition-text);
  opacity: 0.5;
}

a:hover {
  text-decoration: none;
  color: var(--main-color);
}

p > a:hover::after {
  width: 100%;
}

.section {
  width: 75vw;
  height: 100vh;
}

.section-title {
  font-size: 30pt;
  font-weight: 700;
  color: var(--off-white);
}

.title-bar {
  background: var(--main-color);
  height: 4px;
  width: 100px;
}

@media screen and (max-width: 576px) {

  .about-summary {
    font-size: var(--font-body-sm) !important;
    margin-top: 1.25rem !important;
  }

}

/****************************************************************************************
                                    Navigation Section
 ****************************************************************************************/

#navigation {
  position: fixed;
  padding: 20px 50px;
  z-index: 7;
  width: 100%;
  transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1) 0s;
  text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.8);
}
≠ #navbarNavAltMarkup {
  justify-content: flex-end;
}

.nav-item {
  padding: 0 10px;
  color: #fff;
  font-family: "Open Sans", monospace;
  font-weight: bold;
  font-size: 18px;
}

.nav-item:hover {
  color: #5ee6bde0;
  transition: all();
}

.navbar a img {
  width: 3.5rem;
}

.navbar-nav {
  width: 600px;
  justify-content: space-evenly;
}

.resumeButton {
  justify-self: end;
  border-style: solid;
  border-color: var(--main-color);
  border-width: 1px;
  border-radius: 4px;
  font-size: 13px;
  font-family: "Fira Code", monospace;
  font-weight: lighter;
  padding: 0.8rem 1.5rem;
  color: var(--main-color);
  text-decoration: none !important;
  margin-right: 3rem;
}

.resumeButton:hover {
  color: var(--main-color);
  background-color: var(--color-dim);
  transition: all 0.2s linear, 1s;
}

/* *****************************************************************************************
                              Heading Styling Section
******************************************************************************************* */

.heading {
  font-size: 1.5em;
  font-family: var(--font-family);
  line-height: 20pt;
}

@media screen and (min-width: 570px) {
  .heading {
    font-size: 2em;
    line-height: 28pt;
  }
}

@media screen and (min-width: 992px) {
  .heading {
    font-size: 3em;
    line-height: 36pt;
  }
}

#group1 {
  z-index: 5; /* slide over group 2 */
}
#group1 .parallax__layer--base {
  background: rgb(102, 204, 102);
}

#group2 {
  z-index: 3; /* slide under groups 1 and 3 */
}

#group2 .parallax__layer--back {
  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
    url(https://media.giphy.com/media/3oEjI2GUZ3RffMInja/giphy.gif);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
}

/****************************************************************************************
                                    About Styling Section
 ****************************************************************************************/

#group3 {
  z-index: 4; /* slide over group 2 and 4 */
}
#group3 .parallax__layer--base {
  background: var(--bg-base);
}
/* ... */

